[Language Selection] feat, language for ConcertList

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,6 @@
   "My tickets": "My tickets",
   "News": "News",
   "Song list": "Song list",
-  "User Profile": "User Profile"
+  "User Profile": "User Profile",
+  "More Detail": "More Detail"
 }
