--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -4,5 +4,6 @@
   "My tickets": "我的門票",
   "News": "新聞",
   "Song list": "歌曲列表",
-  "User Profile": "用戶資料"
+  "User Profile": "用戶資料",
+  "More Detail": "更多細節"
 }
