feat: add some translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,52 @@
     "News": "News",
     "Song list": "Song list",
     "User Profile": "User Profile",
-    "More Detail": "More Detail"
+    "More Detail": "More Detail",
+    "Select Item Error": "Please select at least one ticket or merchandise item",
+    "Selected Tickets": "Selected Tickets",
+    "Add": "Add",
+    "Ticket": "Ticket",
+    "Merchandise": "Merchandise",
+    "Charity Item": "Charity Item",
+    "Selected Merchandise": "Selected Merchandise",
+    "Total": "Total",
+    "Submit Order": "Submit Order",
+    "Section Information": "Section Information",
+    "Please Select a Section": "Please select one of the section to view the detail",
+    "Remaining": "Remaining",
+    "Price": "Price",
+    "Selected Section": "Selected Section",
+    "Select Order": "Select Order",
+    "Ticket Confirmation": "Ticket Confirmation",
+    "Payment": "Payment",
+    "View Order": "View Order",
+    "Order": "Order",
+    "Order Id": "Order Id",
+    "Activity": "Activity",
+    "Order Confirmation": "Order Confirmation",
+    "Order Information": "Order Information",
+    "Order Number": "Order Number",
+    "Order Date": "Order Date",
+    "Order Status": "Order Status",
+    "Payment Status": "Payment Status",
+    "Concert Detail": "Concert Detail",
+    "Date": "Date",
+    "Time": "Time",
+    "Venue": "Venue",
+    "Location": "Location",
+    "Ticket Information": "Ticket Information",
+    "Seat": "Seat",
+    "Waiting for Payment": "Waiting for Payment",
+    "Quantity": "Quantity",
+    "Unit Price": "Unit Price",
+    "Total Price": "Total Price",
+    "Pay": "Pay",
+    "Order Confirmed": "Order Confirmed",
+    "Payment Method": "Payment Method",
+    "Show QR Code": "Please present the ticket QR code on the day of the concert",
+    "Download e-Ticket": "Download e-Ticket",
+    "Back to Home Page": "Back to Home Page",
+    "Press Release": "Press Release",
+    "Event": "Event",
+    "Blog": "Blog"
 }
