--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -5,5 +5,52 @@
     "News": "新聞",
     "Song list": "歌曲列表",
     "User Profile": "用戶資料",
-    "More Detail": "更多細節"
+    "More Detail": "更多細節",
+    "Select Item Error": "請至少選擇一張門票或商品",
+    "Selected Tickets": "已選擇的門票",
+    "Add": "添加",
+    "Ticket": "門票",
+    "Merchandise": "商品",
+    "Charity Item": "慈善物品",
+    "Selected Merchandise": "已選擇的商品",
+    "Total": "總計",
+    "Submit Order": "提交訂單",
+    "Section Information": "區域資訊",
+    "Please Select a Section": "請選擇一個區域以查看詳細信息",
+    "Remaining": "剩餘",
+    "Price": "價格",
+    "Selected Section": "已選擇的區域",
+    "Select Order": "選擇訂單",
+    "Ticket Confirmation": "門票確認",
+    "Payment": "付款",
+    "View Order": "查看訂單",
+    "Order": "訂單",
+    "Order Id": "訂單編號",
+    "Activity": "活動",
+    "Order Confirmation": "訂單確認",
+    "Order Information": "訂單信息",
+    "Order Number": "訂單號碼",
+    "Order Date": "訂單日期",
+    "Order Status": "訂單狀態",
+    "Payment Status": "付款狀態",
+    "Concert Detail": "音樂會詳情",
+    "Date": "日期",
+    "Time": "時間",
+    "Venue": "場地",
+    "Location": "地點",
+    "Ticket Information": "門票信息",
+    "Seat": "座位",
+    "Waiting for Payment": "等待付款",
+    "Quantity": "數量",
+    "Unit Price": "單價",
+    "Total Price": "總價",
+    "Pay": "支付",
+    "Order Confirmed": "訂單已確認",
+    "Payment Method": "付款方式",
+    "Show QR Code": "請在音樂會當天出示門票二維碼",
+    "Download e-Ticket": "下載電子門票",
+    "Back to Home Page": "返回首頁",
+    "Press Release": "新聞稿",
+    "Event": "活動",
+    "Blog": "博客"
 }
