feat: add more translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,5 +52,20 @@
     "Back to Home Page": "Back to Home Page",
     "Press Release": "Press Release",
     "Event": "Event",
-    "Blog": "Blog"
+    "Blog": "Blog",
+    "Lineup": "Lineup",
+    "Buy Now": "Buy Now",
+    "Welcome to": "Welcome to",
+    "Explore the World of Coldplay Together": "Explore the World of Coldplay Together",
+    "View Tour Dates": "View Tour Dates",
+    "Links": "Links",
+    "Social Media": "Social Media",
+    "Login": "Login",
+    "Logout": "Logout",
+    "Songs": "Songs",
+    "All Albums": "All Albums",
+    "Sort by": "Sort by",
+    "Name": "Name",
+    "Album": "Album",
+    "Year": "Year"
 }
