--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -52,5 +52,20 @@
     "Back to Home Page": "返回首頁",
     "Press Release": "新聞稿",
     "Event": "活動",
-    "Blog": "博客"
+    "Blog": "博客",
+    "Lineup": "陣容",
+    "Buy Now": "立即購買",
+    "Welcome to": "歡迎來到",
+    "Explore the World of Coldplay Together": "一起探索Coldplay的世界",
+    "View Tour Dates": "查看巡演日期",
+    "Links": "連結",
+    "Social Media": "社交媒體",
+    "Login": "登錄",
+    "Logout": "登出",
+    "Songs": "歌曲",
+    "All Albums": "所有專輯",
+    "Sort by": "排序",
+    "Name": "名稱",
+    "Album": "專輯",
+    "Year": "年份"
 }
