--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -67,5 +67,9 @@
     "Sort by": "排序",
     "Name": "名稱",
     "Album": "專輯",
-    "Year": "年份"
+    "Year": "年份",
+    "Contribution Rank 1": "您是第",
+    "Contribution Rank 2": "名捐助者！",
+    "Current Tree 1": "目前我們已經種植了",
+    "Current Tree 2": "棵樹"
 }
