--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,5 +72,17 @@
     "Contribution Rank 1": "You are the",
     "Contribution Rank 2": "st contributor!",
     "Current Tree 1": "Currently we have already planted",
-    "Current Tree 2": "trees"
+    "Current Tree 2": "trees",
+    "Latest News": "Latest News",
+    "Press Release": "Press Release",
+    "Event": "Event",
+    "Blog": "Blog",
+    "News 1 Title": "🔥 Coldplay Adds Emergency Concert Due to High Demand 🔥",
+    "News 1 Description": "Due to overwhelming demand, Coldplay has announced an emergency additional concert on March 13, 2025....",
+    "News 2 Title": "Behind the Scenes: New Album",
+    "News 2 Description": "Coldplay's latest album has been a hit with fans....",
+    "News 3 Title": "Coldplay Fan Meetup 2024",
+    "News 3 Description": "Coldplay fans are invited to a special fan meetup....",
+    "News 4 Title": "Coldplay Announces Partnership for Sustainability",
+    "News 4 Description": "Coldplay announces a new partnership with leading environmental organizations to promote sustainability...."
 }
