--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -71,5 +71,17 @@
     "Contribution Rank 1": "您是第",
     "Contribution Rank 2": "名捐助者！",
     "Current Tree 1": "目前我們已經種植了",
-    "Current Tree 2": "棵樹"
+    "Current Tree 2": "棵樹",
+    "Latest News": "最新消息",
+    "Press Release": "新聞稿",
+    "Event": "活動",
+    "Blog": "博客",
+    "News 1 Title": "🔥 Coldplay 因需求量大增加緊急音樂會 🔥",
+    "News 1 Description": "由於需求量大，Coldplay 宣布將於 2025 年 3 月 13 日增加一場緊急音樂會....",
+    "News 2 Title": "幕後花絮：新專輯",
+    "News 2 Description": "Coldplay 的最新專輯深受粉絲喜愛....",
+    "News 3 Title": "Coldplay 粉絲見面會 2024",
+    "News 3 Description": "Coldplay 粉絲受邀參加特別的粉絲見面會....",
+    "News 4 Title": "Coldplay 宣佈可持續發展合作夥伴關係",
+    "News 4 Description": "Coldplay 宣佈與領先的環保組織建立新的合作夥伴關係，以促進可持續發展...."
 }
