feat: translate my order

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,13 +70,10 @@
     "Year": "Year",
     "Contribution": "Thank you for your contribution!",
     "Contribution Rank 1": "You are the",
-    "Contribution Rank 2": "st contributor!",
+    "Contribution Rank 2": "nd contributor!",
     "Current Tree 1": "Currently we have already planted",
     "Current Tree 2": "trees",
     "Latest News": "Latest News",
-    "Press Release": "Press Release",
-    "Event": "Event",
-    "Blog": "Blog",
     "News 1 Title": "🔥 Coldplay Adds Emergency Concert Due to High Demand 🔥",
     "News 1 Description": "Due to overwhelming demand, Coldplay has announced an emergency additional concert on March 13, 2025....",
     "News 2 Title": "Behind the Scenes: New Album",
@@ -84,5 +81,15 @@
     "News 3 Title": "Coldplay Fan Meetup 2024",
     "News 3 Description": "Coldplay fans are invited to a special fan meetup....",
     "News 4 Title": "Coldplay Announces Partnership for Sustainability",
-    "News 4 Description": "Coldplay announces a new partnership with leading environmental organizations to promote sustainability...."
+    "News 4 Description": "Coldplay announces a new partnership with leading environmental organizations to promote sustainability....",
+    "My Order": "My Order",
+    "My order": "My order",
+    "No Order": "No Order",
+    "Number of Ticket": "Number of Ticket",
+    "Number of Merchandise": "Number of Merchandise",
+    "Details": "Details",
+    "Paid": "Paid",
+    "Pending": "Pending",
+    "Completed": "Completed",
+    "Unknown": "Unknown"
 }
