--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -73,9 +73,6 @@
     "Current Tree 1": "目前我們已經種植了",
     "Current Tree 2": "棵樹",
     "Latest News": "最新消息",
-    "Press Release": "新聞稿",
-    "Event": "活動",
-    "Blog": "博客",
     "News 1 Title": "🔥 Coldplay 因需求量大增加緊急音樂會 🔥",
     "News 1 Description": "由於需求量大，Coldplay 宣布將於 2025 年 3 月 13 日增加一場緊急音樂會....",
     "News 2 Title": "幕後花絮：新專輯",
@@ -83,5 +80,15 @@
     "News 3 Title": "Coldplay 粉絲見面會 2024",
     "News 3 Description": "Coldplay 粉絲受邀參加特別的粉絲見面會....",
     "News 4 Title": "Coldplay 宣佈可持續發展合作夥伴關係",
-    "News 4 Description": "Coldplay 宣佈與領先的環保組織建立新的合作夥伴關係，以促進可持續發展...."
+    "News 4 Description": "Coldplay 宣佈與領先的環保組織建立新的合作夥伴關係，以促進可持續發展....",
+    "My Order": "我的訂單",
+    "My order": "我的訂單",
+    "No Order": "您目前沒有任何訂單",
+    "Number of Ticket": "門票數量",
+    "Number of Merchandise": "商品數量",
+    "Details": "詳情",
+    "Paid": "已支付",
+    "Pending": "待支付",
+    "Completed": "已完成",
+    "Unknown": "未知"
 }
